// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<section
  className="section__StyledSection-sc-838b20-0 joKwZW"
>
  Section content
</section>
`;

exports[`Section should render with headline 1`] = `
<section
  className="section__StyledSection-sc-838b20-0 joKwZW"
>
  <h2
    className="headline__Headline-sc-187wqm3-0 section__SectionHeadline-sc-838b20-1 gaUVNO"
  >
    Section headline
  </h2>
  Section content
</section>
`;
